src/objects/Handling__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handled_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Handled By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact employé</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Handlings</relationshipLabel>
        <relationshipName>Handlings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handling_End_Date__c</fullName>
        <label>Handling End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Handling_Start_Date__c</fullName>
        <label>Handling Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Handling_Type__c</fullName>
        <label>Handling Type</label>
        <picklist>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Examen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Préparation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Piece_Number__c</fullName>
        <label>Piece Number</label>
        <referenceTo>Pieces__c</referenceTo>
        <relationshipLabel>Handlings</relationshipLabel>
        <relationshipName>Handlings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Manipulation</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Handling Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manipulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>